force-app/main/default/objects/Expense_Item__c/fields/Amount_Excluding_GST__c.field-meta.xml
<CustomField>
    <fullName>Amount_Excluding_GST__c</fullName>
    <formula>Amount__c  -  GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount - GST</inlineHelpText>
    <label>Amount (Excluding GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>