force-app/main/default/objects/Expense_Item__c/fields/Emp_Name__c.field-meta.xml
<CustomField>
    <fullName>Emp_Name__c</fullName>
    <formula>Expense_Claim__r.Employee__r.FirstName &amp;&quot; &quot;&amp;  Expense_Claim__r.Employee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emp Name</label>
    <type>Text</type>
</CustomField>