force-app/main/default/objects/Expense_Item__c/fields/Expense_Claim__c.field-meta.xml
<CustomField>
    <fullName>Expense_Claim__c</fullName>
    <label>Expense Claim</label>
    <referenceTo>Expense_Claim__c</referenceTo>
    <relationshipLabel>Expense Items</relationshipLabel>
    <relationshipName>Expense_Claims</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>