force-app/main/default/objects/Expense_Item__c/fields/Finance_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Finance_Remarks__c</fullName>
    <label>Finance Remarks</label>
    <type>TextArea</type>
</CustomField>