force-app/main/default/objects/Expense_Item__c/fields/Invoice_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Receipt_Number__c</fullName>
    <label>Invoice/Receipt Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>