force-app/main/default/objects/Expense_Item__c/fields/Other_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Other_Supplier__c</fullName>
    <label>Other Supplier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>