force-app/main/default/objects/Expense_Item__c/fields/Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Status__c</fullName>
    <label>Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receipt Received</fullName>
            </value>
            <value>
                <fullName>Received not Received - Approved</fullName>
            </value>
            <value>
                <fullName>Receipt Not Received - Reversal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>