force-app/main/default/objects/Expense_Item__c/fields/Unique_Supplier_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Unique_Supplier_Receipt__c</fullName>
    <label>Unique Supplier Receipt</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>