force-app/main/default/objects/Expense_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expense_Type__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Supplier__c</columns>
    <columns>Other_Supplier__c</columns>
    <columns>Invoice_Receipt_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Amount_Excluding_GST__c</columns>
    <columns>GST_Amount__c</columns>
    <columns>Receipt_Status__c</columns>
    <columns>Remarks__c</columns>
    <columns>Finance_Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>