force-app/main/default/objects/Expense_Item__c/listViews/Items_pending_Receipt.listView-meta.xml
<ListView>
    <fullName>Items_pending_Receipt</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Receipt_Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>Items pending Receipt</label>
</ListView>